<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:id="@+id/setting_tips"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_gps"/>
    <Spinner
        android:id="@+id/setting_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_gps_prompt"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_map_level"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_map_prompt"/>
    <Button
        android:id="@+id/setting_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_submit"/>
</LinearLayout>
