<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<com.baidu.mapapi.map.MapView
    android:id="@+id/mv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:enabled="true"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1px">
        <Button
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80px"
            android:background="#550000ff"
            android:text="@string/satellite"/>
             <Button
            android:id="@+id/traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                 android:background="#550000ff"
            android:text="@string/traffic"/>
             <Button
            android:id="@+id/streetview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                 android:background="#550000ff"
            android:text="@string/streetview"/>
             <Button
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="GPS"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="1px">
        <Button
            android:id="@+id/zin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:layout_marginTop="150px"
            android:text="+"/>
        <Button
            android:id="@+id/zout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="-"/>
        <Button
            android:id="@+id/pann"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="N"/>
        <Button
            android:id="@+id/pane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="E"/>
        <Button
            android:id="@+id/panw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="W"/>
        <Button
            android:id="@+id/pans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#550000ff"
            android:text="S"/>
    </LinearLayout>
</FrameLayout>
